# regular-tools

./: .gitignore  README.md
doc/: asm.md  emu.md  ext.md  fmt.md  prg.md  v2.md
src/: asm.c  asm.h  asm_ext.h  buf.h  buffie.h  configure  disasm.c  disasm.h  ds.h  emu.c  emu.h  instr.h  lex.h  meson.build  util.h
test/: arith3.asm  asmv2.asm  data.asm  fib.asm  func.asm  func2.asm  logic.asm  loop.asm  mem.asm  nested.asm  print.asm  test2.asm  test3.asm
